--- a/index.html
+++ b/index.html
@@ -1,6 +1,54 @@
 <html>
-<body>
-<h3>Testing</h3>
-Oh, this is interesting.
+<head>
+<TITLE>Vivtek</TITLE>
+
+<META NAME="description" CONTENT="Vivtek does online database programming, offers an ecomm service for small business, integrates CyberCash with any website, and offers free technical information on a variety of topics.">
+<META NAME="Keywords" CONTENT="Vivtek, software tools, programming tools, programming service, CyberCash integration, active websites, database-backed websites">
+<style>[##style##]</style>
+</head>
+
+<body bgcolor="#FFFFFF" link="#000099" vlink="#990000" alink="990000">
+
+[##nav##]
+
+<center>
+<img src="images/vivtek.gif" alt="Vivtek!" height=130 width=399>
+<br><br>
+</center>
+
+<center>
+<table border=0 width=85%>
+
+<tr><td>
+<p>Vivtek is the catchall site for Michael Roberts.  Before this update, I'd last changed this index page on September 19, 1999.  I figure once a decade
+is probably reasonable, but if you're change-averse, the <a href="legacy_index.html">old version is here</a>.  (I just couldn't bear to part with it.)
+</p><p>
+Anyway, I wrote that old page in bygone years, when I still made my money from programming.  Since then, I'm really not that person any more.  I
+<a href="/projects/">still program for fun</a>, of course -- and I <a href="/wftk/">did an open-source workflow system</a> for a while (I'll get back to
+it any day now.) I wrote and still manage <a href="http://www.despammed.com/">Despammed.com</a> and I'm working on <a href="/projects/forum_despammer/">fighting
+Web spam, too</a>.  (Not very effectively lately, because I got bored. So there's a rich vein of spam on this site nowadays.  Sorry.  I mean, "I'm doing it for purposes of experimentation.")  I did a <a href="/toonbots/">Web comic</a> for a while, using the <a href="/toon-o-matic/">Toon-o-Matic</a>, which you can now use
+yourself, right here.  And I make my money with technical translation, not programming.
+</p><p>
+In short, my life is richer and more diverse than I had anticipated in September of 1999.  And now, nine years later, I guess it's time this page reflected
+a little of that.  If I were really into this, I'd make some cool graphical layout.  But I'm a text kind of guy, so this is what you get instead.
+</p>
+</td></tr>
+
+<!--<tr><td>
+<p>
+Since I <a href="/projects/wiki/">started Wiki-izing this site</a>, there is now a handy-dandy index that I can use to show you what I've been opining on
+most recently:
+[##dynamic wiki_recent.pl##]
+</p>
+</td></tr>-->
+
+<a name=thought>
+<tr><td colspan=3><center><strong><br><br><pre>T H O U G H T   F O R   T H E   D A Y</pre></strong><font face=arial size=+1>[##question##]</font><br><br><font size=-1><a href=/thoughts.html>More thoughts like that here...</a></font></center></td></tr>
+
+
+</table>
+</center>
+
+[##cr_fill##]
 </body>
 </html>
