--- a/index.html
+++ b/index.html
@@ -105,13 +105,39 @@ most recently:
 </p>
 </td></tr>-->
 
-<a name=thought>
-<tr><td colspan=3><center><strong><br><br><pre>T H O U G H T   F O R   T H E   D A Y</pre></strong><font face=arial size=+1>(unresolved tag question)</font><br><br><font size=-1><a href=/thoughts.html>More thoughts like that here...</a></font></center></td></tr>
-
-
 </table>
+
+</div></td></td></table>
+
+<br><br><br><br>
+    <center><img src="/images/black.gif" height=1 width=300><br>
+    <Font Size="-1"><A HREF="/disclaimer.html">Copyright</A> &copy; 1996-2009 Vivtek. All Rights Reserved.  <a href=/disclaimer.html>Read the disclaimer.</a></font>
+    <BR>
+    <font size="-1"><a href="/privacy.html">Read our privacy statement, too, if you are concerned.</a></font>
+    <Br>
+    Problems?  Try <A HREF="/webmaster.html">webmaster@vivtek.com</A> or our
+                   <A href="/answers.html">answer page</A>.</Font>
+<br><br>
+<script type="text/javascript"><!--
+google_ad_client = "pub-7508846022405297";
+google_ad_width = 468;
+google_ad_height = 60;
+google_ad_format = "468x60_as";
+google_ad_type = "text";
+google_ad_channel = "";
+google_color_border = "CCCCCC";
+google_color_bg = "CCCCCC";
+google_color_link = "000000";
+google_color_text = "333333";
+google_color_url = "666666";
+//--></script>
+<script type="text/javascript"
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 </center>
 
-{% include cr_fill.tag %}
+
+Can you believe this is served up from Github now?
+</center>
 </body>
 </html>
