--- a/aaron_swartz_legacy.html
+++ b/aaron_swartz_legacy.html
@@ -158,7 +158,7 @@ at MIT - data that never saw the light of day due to legal threats.
 His basic starting point seems to have been that he was nothing special,
 that anybody could do what he did using a simple five-step process he
 outlines in his article
-<a href=https://aaronsw.jottit.com/howtoget.html>How to Get a Job Like Mine</a>:
+<a href=https://aaronsw.jottit.com/howtoget/>How to Get a Job Like Mine</a>:
 1. Learn, 2. Try, 3. Gab, 4. Build, 5. Freedom.  And you know what?
 He's right.  He's so right.  There's so much work to be done.
 </p><p>
