--- a/aaron_swartz_legacy.html
+++ b/aaron_swartz_legacy.html
@@ -100,20 +100,23 @@ Aaron Swartz committed suicide last night.
 It's really only in the past year or so that I had grown aware
 of him at all; one hears a lot of names over the course of following
 the industry and the Internet scene, and I'd naturally heard of him.
-But gradually I came to realize that I kept hearing about him in
-matters that were of particular interest to me, the most significant
+But it was only recently that I had come
+to realize that I kept hearing about him in
+matters that were of particular interest to <i>me</i>,
+the most significant
 being, of course, the JSTOR story (Harvard Law has a great
 write-up of that whole thing
 <a href=http://blogs.law.harvard.edu/sj/2011/07/24/aaron-swartz-v-united-states/>at their blog</a>.)
 </p><p>
 Today, though, his untimely death at only 26 having brought forth
-a flurry of writing about him, I've read quite a lot about him.
+a flurry of writing about him, I've read quite a lot about him,
+and some of his own writing.
 Cory Doctorow writes, "I think he could have revolutionized American
 (and worldwide) politics. His legacy may still yet do so."
 <a href=http://boingboing.net/2013/01/12/rip-aaron-swartz.html>That whole article</a>
 is well worth a read, by the way.
 </p><p>
-It expresses some of Aaron's off-the-cuff thoughts about an electioneering
+Cory quotes some of Aaron's off-the-cuff thoughts about an electioneering
 system that makes sense, one that is inherently data-driven and democratic
 because it actively attempts to find out the people want, and <i>do that</i>.
 Honestly,
@@ -122,19 +125,19 @@ and I frankly wonder what that might bring, but ... damn.  Moth, meet flame.
 </p><p>
 I kept reading.  Swartz was exactly 20 years younger than I - we shared
 a birthday.  We're both from the middle of the country (he from Chicago,
-I from rural Indiana) and he grew up with an Internet and I didn't.
+I from rural Indiana), and he grew up with an Internet and I didn't.
 I look at his accomplishments and I am in awe - and yet I get an
 idea of what killed him. It's tempting to say it was the prospect of
 prison for a "crime" that hurt no-one and whose supposed victims
-didn't even want to press charges, and I suspect that's not wrong.
+didn't even want to press charges, and I suspect that's not too far wrong.
 </p><p>
 But his politics were awfully damn close to mine, and I think he felt
 the same sense of a world gone hell-in-a-handbasket wrong, and the same
 vision of how things <i>could</i> be if all the corruption and
 special interests were swept away.  The fact that the government actively
 works to hinder that vision is distressing.  Swartz spent a significant
-part of his short life trying to steer that train, and I think the
-despair was too much.
+part of his short life trying to steer that train, and I think it was
+just too much.
 </p><p>
 I didn't know him.  But I sure wish I had.  This is a guy who talked
 his way onto a W3C standards committee at the age of 14, who helped
