--- a/aaron_swartz_legacy.html
+++ b/aaron_swartz_legacy.html
@@ -135,7 +135,9 @@ But his politics were awfully damn close to mine, and I think he felt
 the same sense of a world gone hell-in-a-handbasket wrong, and the same
 vision of how things <i>could</i> be if all the corruption and
 special interests were swept away.  The fact that the government actively
-works to hinder that vision is distressing.  Swartz spent a significant
+works to hinder that vision is distressing.  (Lawrence Lessig has some
+<a href=http://lessig.tumblr.com/post/40347463044/prosecutor-as-bully>good thoughts on this aspect</a>.)
+Swartz spent a significant
 part of his short life trying to steer that train, and I think it was
 just too much.
 </p><p>
