--- a/xlation_resume.html
+++ b/xlation_resume.html
@@ -26,7 +26,7 @@ Since 2006, I've translated 1 to 1.25 million words per year.  A typical month i
 <tr><td><i>Platforms</i>:</td><td>PC/Windows and Linux.</td></tr>
 <tr><td><i>Capacity</i>:</td><td>DE&gt;EN up to 6000 words/day; FR&gt;EN, ES&gt;EN 4000 words/day; IT&gt;EN,HU&gt;EN about 2500 words/day.</td></tr>
 <tr><td><i>Availability</i>:</td><td>Varies according to current workload, of course, but in general, I can nearly always work in a job of 3000 words or less.<br>I am always interested in hearing from new agencies.</td></tr>
-<tr><td><i>Rates</i>:</td><td>I'm flexible on rates, so feel free to ask if you want special consideration, but my standard rate is 0.10 EUR or 12 cents US per new source word.  Rates are negotiable if the work warrants it.</td></tr>
+<tr><td><i>Rates</i>:</td><td>I'm flexible on rates, so feel free to ask if you want special consideration, but my standard rate is 0.10 EUR or 12 cents US per new source word.  Rates are negotiable if the work warrants it or if I like you.</td></tr>
 
 <tr><td><i>Areas of specialization</i>:</td><td>IT/software, telecommunications, electronics; pharmaceuticals, clinical trials, medical devices; patents;
 some experience with machine tools (DE) and with business reports (DE, FR).  SAP-oriented translation (DE).</td></tr>
