Can't remember my own syntax

--- a/peanuts_milestones.html
+++ b/peanuts_milestones.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>(unresolved tag title)</title>
+<title>Milestones in Early Peanuts</title>
 <style>p, li, td {
 font-family: arial, sans-serif;
 }
@@ -93,8 +93,7 @@ did my Google go?</a>
 </td>
 <td valign="top"><div class="content">
 
-<div class="title">(unresolved tag title)</div>
-title:Milestones in Early Peanuts
+<div class="title">Milestones in Early Peanuts</div>
 </p><p>
 I've been reading the early Peanuts strips (waaay before the characters took on their current forms)
 and it's remarkable the sense I'm getting of novelty.  A lot of the charm
