Still waffling about how to handle e.g. &eacut;

--- a/peanuts_milestones.html
+++ b/peanuts_milestones.html
@@ -216,7 +216,7 @@ and look suspiciously like Peppermint Patty.</li>
 <li><a href=http://www.gocomics.com/peanuts/1966/07/24>Jul 24, 1966</a> - WWI flying aces drink root beer when in Paris.</li>
 <li><a href=http://www.gocomics.com/peanuts/1966/08/22>Aug 22, 1966</a> - "Peppermint" Patty at last!</li>
 <li><a href=http://www.gocomics.com/peanuts/1967/02/19>Feb 19, 1967</a> - The kite-eating tree transitions from epithet to cold reality.</li>
-<li><a href=http://www.gocomics.com/peanuts/1967/03/20>Mar 20, 1967</a> - Introduction of good ball player Jos&eacut; Peterson.</li>
+<li><a href=http://www.gocomics.com/peanuts/1967/03/20>Mar 20, 1967</a> - Introduction of good ball player José Peterson.</li>
 <li><a href=http://www.gocomics.com/peanuts/1968/06/18>Jun 18, 1968</a> - Marcie!  Whoops, maybe not.</li>
 <li><a href=http://www.gocomics.com/peanuts/1968/07/31>Jul 31, 1968</a> - Franklin! This storyline is a little trippy;
 it's at the beach instead of at home, and he's kind of playing with the medium a little. When Franklin says
