Added the Easter Beagle, also fixed é in José Petersen's name

--- a/peanuts_milestones.html
+++ b/peanuts_milestones.html
@@ -216,7 +216,8 @@ and look suspiciously like Peppermint Patty.</li>
 <li><a href=http://www.gocomics.com/peanuts/1966/07/24>Jul 24, 1966</a> - WWI flying aces drink root beer when in Paris.</li>
 <li><a href=http://www.gocomics.com/peanuts/1966/08/22>Aug 22, 1966</a> - "Peppermint" Patty at last!</li>
 <li><a href=http://www.gocomics.com/peanuts/1967/02/19>Feb 19, 1967</a> - The kite-eating tree transitions from epithet to cold reality.</li>
-<li><a href=http://www.gocomics.com/peanuts/1967/03/20>Mar 20, 1967</a> - Introduction of good ball player José Peterson.</li>
+<li><a href=http://www.gocomics.com/peanuts/1967/03/20>Mar 20, 1967</a> - Introduction of good ball player Jos&eacut; Peterson.</li>
+<li><a href=http://www.gocomics.com/peanuts/1968/04/14>Apr 14, 1968</a> - (Easter Sunday) Snoopy dances around and gives Linus eggs for the first time.</li>
 <li><a href=http://www.gocomics.com/peanuts/1968/06/18>Jun 18, 1968</a> - Marcie!  Whoops, maybe not.</li>
 <li><a href=http://www.gocomics.com/peanuts/1968/07/31>Jul 31, 1968</a> - Franklin! This storyline is a little trippy;
 it's at the beach instead of at home, and he's kind of playing with the medium a little. When Franklin says
@@ -236,12 +237,16 @@ Could it be that she was the sister of the boy in Kansas who loved the girl
 with the tattered shawl who was the daughter of the maid who had escaped from the
 pirates? The intern frowned.</li>
 <li><a href=http://www.gocomics.com/peanuts/1970/06/22>Jun 22, 1970</a> - Woodstock finally gets a name.</li>
+<li><a href=http://www.gocomics.com/peanuts/1971/04/11>Apr 11, 1971</a> - The Easter Beagle? (First use of that epithet.)</li>
 <li><a href=http://www.gocomics.com/peanuts/1971/05/27>May 27, 1971</a> - The first appearance of Joe Cool.</li>
 <li><a href=http://www.gocomics.com/peanuts/1971/07/20>Jul 20, 1971</a> - Marcie! For real this time.</li>
 <li><a href=http://www.gocomics.com/peanuts/1972/05/23>May 23, 1972</a> - Rerun!</li>
 <li><a href=http://www.gocomics.com/peanuts/1972/07/29>Jul 29, 1972</a> - The clouds got in my eyes.</li>
 <li><a href=http://www.gocomics.com/peanuts/1975/08/04>Aug 04, 1975</a> - Spike! Living in Needles already in 1975.</li>
 <li><a href=http://www.gocomics.com/peanuts/1975/11/01>Nov 01, 1975</a> - All I got was a rock.</li>
+<li><a href=http://www.gocomics.com/peanuts/1976/01/13>Jan 13, 1976</a> - Charlie Brown starts going to Peppermint Patty's
+after his own commits suicide (they live in different parts of town).</li>
+<li><a href=http://www.gocomics.com/peanuts/1976/02/22>Feb 22, 1976</a> - First time Snoopy is the scout leader with Woodstock as the scout. (I think.)</li>
 </ul>
 </p><p>
 
