Quick change to translation resume for a job.

--- a/xlation_resume.html
+++ b/xlation_resume.html
@@ -14,7 +14,8 @@ only brief reference to the extensive technical experience which I consider
 an integral part of my translation skills.  For more detail, see
 <a href="http://www.vivtek.com/michael_resume.html">my technical r&eacute;sum&eacute;</a>.
 Although I was certified as a technical translator in 1988, I have been translating on what
-I consider a professional basis since 2001, about <b>12 years</b> now.
+I consider a professional basis since 2001, about <b>13 years</b> now, and it has been my
+primary source of income since 2004.
 <p>
 Since 2006, I've translated 1 to 1.25 million words per year.  A typical month is 80,000 to 120,000 words.
 <P>
@@ -22,14 +23,15 @@ Since 2006, I've translated 1 to 1.25 million words per year.  A typical month i
 <HR>
 <B>Working parameters</B><P>
 <table>
-<tr><td><i>Software available</i>:</td><td>TRADOS (2007 and 2009), SDLX, Transit, MemoQ; Microsoft Office; professional script programming.</td></tr>
+<tr><td><i>Software available</i>:</td><td>TRADOS (2007 and 2011), SDLX, Transit, MemoQ; Microsoft Office; professional script programming.</td></tr>
 <tr><td><i>Platforms</i>:</td><td>PC/Windows and Linux.</td></tr>
-<tr><td><i>Capacity</i>:</td><td>DE&gt;EN up to 6000 words/day; FR&gt;EN, ES&gt;EN 4000 words/day; IT&gt;EN,HU&gt;EN about 2500 words/day.</td></tr>
+<tr><td><i>Capacity</i>:</td><td>DE&gt;EN up to 6000 words/day; FR&gt;EN, ES&gt;EN, IT%gt;EN 4000 words/day; HU&gt;EN about 2500 words/day.</td></tr>
 <tr><td><i>Availability</i>:</td><td>Varies according to current workload, of course, but in general, I can nearly always work in a job of 3000 words or less.<br>I am always interested in hearing from new agencies.</td></tr>
 <tr><td><i>Rates</i>:</td><td>I'm flexible on rates, so feel free to ask if you want special consideration, but my standard rate is 0.10 EUR or 12 cents US per new source word.  Rates are negotiable if the work warrants it or if I like you.</td></tr>
 
 <tr><td><i>Areas of specialization</i>:</td><td>IT/software, telecommunications, electronics; pharmaceuticals, clinical trials, medical devices; patents;
-some experience with machine tools (DE) and with business reports (DE, FR).  SAP-oriented translation (DE).</td></tr>
+some experience with machine tools (DE) and with business reports (DE, FR).  SAP-oriented translation (DE). Legal documents, contracts, and court
+records (especially DE, IT, but any language is fine).</td></tr>
 </table>
 
 <HR>
@@ -39,13 +41,8 @@ details of my technical experience.<br><br>
 <B>September 1996 - present:</b> <i>Sole proprietor of <a href="http://www.vivtek.com/">Vivtek</a></i><br>
 As Vivtek, I provide consulting and implementation for online and offline
 software development, primarily in the area of online databases.  I write
-technical articles, several of which have been published (for pay) on IBM's
-developerWorks site.  These are pretty good online samples of my writing
-skills, so you might want to look at a couple of the more recent ones:
-<blockquote>
-<a href="http://www-106.ibm.com/developerworks/linux/library/l-zope">Zope for the Perl/CGI programmer</a> (May 2001)<br>
-<a href="http://www-106.ibm.com/developerworks/library/l-pyzo.html">Extending Python and Zope in C</a> (June 2001)
-</blockquote>
+technical articles, several of which were published on IBM's
+developerWorks site back when they were soliciting paid content.
 
 <B>September 1992 - September 1996:</B> <I>Contract work with a major pharmaceutical company
                                         in Indianapolis.</I><BR>
