Aaand fix typos

--- a/xlation_resume.html
+++ b/xlation_resume.html
@@ -25,7 +25,7 @@ Since 2006, I've translated 1 to 1.25 million words per year.  A typical month i
 <table>
 <tr><td><i>Software available</i>:</td><td>TRADOS (2007 and 2011), SDLX, Transit, MemoQ; Microsoft Office; professional script programming.</td></tr>
 <tr><td><i>Platforms</i>:</td><td>PC/Windows and Linux.</td></tr>
-<tr><td><i>Capacity</i>:</td><td>DE&gt;EN up to 6000 words/day; FR&gt;EN, ES&gt;EN, IT%gt;EN 4000 words/day; HU&gt;EN about 2500 words/day.</td></tr>
+<tr><td><i>Capacity</i>:</td><td>DE&gt;EN up to 6000 words/day; FR&gt;EN, ES&gt;EN, IT&gt;EN 4000 words/day; HU&gt;EN about 2500 words/day.</td></tr>
 <tr><td><i>Availability</i>:</td><td>Varies according to current workload, of course, but in general, I can nearly always work in a job of 3000 words or less.<br>I am always interested in hearing from new agencies.</td></tr>
 <tr><td><i>Rates</i>:</td><td>I'm flexible on rates, so feel free to ask if you want special consideration, but my standard rate is 0.10 EUR or 12 cents US per new source word.  Rates are negotiable if the work warrants it or if I like you.</td></tr>
 
@@ -42,7 +42,7 @@ details of my technical experience.<br><br>
 As Vivtek, I provide consulting and implementation for online and offline
 software development, primarily in the area of online databases.  I write
 technical articles, several of which were published on IBM's
-developerWorks site back when they were soliciting paid content.
+developerWorks site back when they were soliciting paid content.<p>
 
 <B>September 1992 - September 1996:</B> <I>Contract work with a major pharmaceutical company
                                         in Indianapolis.</I><BR>
