--- a/recent.html
+++ b/recent.html
@@ -106,6 +106,9 @@ Here's what I've been doing lately:
 <td>2012-12-25</td><td><a href="/moving_to_static.html">Moving to static text on Github</a></td>
 </tr>
 <tr>
+<td>2009-07-31</td><td><a href="/blog\house_update.html">House update</a></td>
+</tr>
+<tr>
 <td>2009-04-14</td><td><a href="/blog\t_minus_a_month.html">T minus a month!</a></td>
 </tr>
 <tr>
@@ -179,9 +182,6 @@ Here's what I've been doing lately:
 </tr>
 <tr>
 <td>2008-08-18</td><td><a href="/projects\despammed\stormspam_explanation.html">What is this?</a></td>
-</tr>
-<tr>
-<td>2008-08-18</td><td><a href="/projects\despammed\timeline.html">Botnet tracker timeline</a></td>
 </tr>
 </table>
 
