Blogging works again

--- a/recent.html
+++ b/recent.html
@@ -94,6 +94,9 @@ did my Google go?</a>
 Here's what I've been doing lately:
 <table>
 <tr>
+<td>2014-04-09</td><td><a href="/blog\blogging_works_again.html">Blogging works again</a></td>
+</tr>
+<tr>
 <td>2014-04-07</td><td><a href="/baaaack.html">Vivtek is back! Again!</a></td>
 </tr>
 <tr>
@@ -146,9 +149,6 @@ Here's what I've been doing lately:
 </tr>
 <tr>
 <td>2009-03-07</td><td><a href="/blog\achewood_ftw.html">Achewood FTW</a></td>
-</tr>
-<tr>
-<td>2009-03-07</td><td><a href="/blog\index.html">Vivtek 2.0, or, The Blog</a></td>
 </tr>
 <tr>
 <td>2009-02-22</td><td><a href="/hikingpr\toronegro.html">Bosque Estatal de Toro Negro State Forest - with trail map!</a></td>
