--- a/perl/perl_uac.html
+++ b/perl/perl_uac.html
@@ -168,7 +168,7 @@ This was already much better! It can be used for anything at all, so if I want
 to edit a system file or something, I can just call it on my editor. Very flexible!
 </p><p>
 Looking a little closer, though, it turns out that the key to that power toy is
-a single call: the <pre>Shell.Application</pre> interface exposes <pre>ShellExecute</pre>,
+a single call: the <tt>Shell.Application</tt> interface exposes <tt>ShellExecute</tt>,
 which can be called with the application (perl), a string containing arguments (the
 script and any arguments it wants), the local directory (which can be left blank to
 use the current directory), and a verb.
