Added the KeePassRest article - whew!

--- a/perl/index.html
+++ b/perl/index.html
@@ -80,6 +80,7 @@ border: 1px solid #336600;
 <div class="sidemenu">
 <p class="smtitle">perl</p>
 <p>[ <a href="/perl/perl_uac.html">runasadmin</a> ]</p>
+<p>[ <a href="/perl/keepassrest.html">keepass</a> ]</p>
 </div>
 
 <hr />
