--- a/recent.html
+++ b/recent.html
@@ -100,6 +100,9 @@ google_ad_channel = "";
 Here's what I've been doing lately:
 <table>
 <tr>
+<td>2014-04-21</td><td><a href="/perl\keepassrest.html">Perl and KeePass through SSL</a></td>
+</tr>
+<tr>
 <td>2014-04-17</td><td><a href="/perl\perl_uac.html">Perl and Windows UAC</a></td>
 </tr>
 <tr>
@@ -185,9 +188,6 @@ Here's what I've been doing lately:
 </tr>
 <tr>
 <td>2008-12-26</td><td><a href="/hikingpr\guanica_trek.html">The Great Guanica Accidental Off-Trail Trek of 2008</a></td>
-</tr>
-<tr>
-<td>2008-12-26</td><td><a href="/hikingpr\guanica.html">Bosque Estatal de Guánica / Dry Forest </a></td>
 </tr>
 </table>
 
