--- a/recent.html
+++ b/recent.html
@@ -100,6 +100,9 @@ google_ad_channel = "";
 Here's what I've been doing lately:
 <table>
 <tr>
+<td>2014-05-20</td><td><a href="/blog\perl_and_nlp.html">Perl and NLP</a></td>
+</tr>
+<tr>
 <td>2014-05-08</td><td><a href="/blog\hoverboards_why_science_cant_stop_yet.html">Hoverboards: why science can't stop yet</a></td>
 </tr>
 <tr>
@@ -185,9 +188,6 @@ Here's what I've been doing lately:
 </tr>
 <tr>
 <td>2009-02-22</td><td><a href="/hikingpr\toronegro.html">Bosque Estatal de Toro Negro State Forest - with trail map!</a></td>
-</tr>
-<tr>
-<td>2009-02-17</td><td><a href="/toon-o-matic\index.html">The Amazing Toon-o-Matic</a></td>
 </tr>
 </table>
 
