--- a/recent.html
+++ b/recent.html
@@ -100,6 +100,9 @@ google_ad_channel = "";
 Here's what I've been doing lately:
 <table>
 <tr>
+<td>2014-05-24</td><td><a href="/blog\adopting_lingua__modules.html">Adopting Lingua:: modules</a></td>
+</tr>
+<tr>
 <td>2014-05-24</td><td><a href="/blog\test_driven_lexicography.html">Test-driven lexicography</a></td>
 </tr>
 <tr>
@@ -185,9 +188,6 @@ Here's what I've been doing lately:
 </tr>
 <tr>
 <td>2009-03-13</td><td><a href="/hikingpr\maricao.html">Bosque Estatal de Maricao/Maricao State Forest</a></td>
-</tr>
-<tr>
-<td>2009-03-13</td><td><a href="/blog\yiddish_policemans_union.html">The Yiddish Policeman's Union</a></td>
 </tr>
 </table>
 
