Fix links on recent.html page
Somehow a bunch of \backslashes\ invaded your recent.html. The way the static files were imported? I pushed them back over.

--- a/recent.html
+++ b/recent.html
@@ -100,43 +100,43 @@ google_ad_channel = "";
 Here's what I've been doing lately:
 <table>
 <tr>
-<td>2014-05-24</td><td><a href="/blog\adopting_lingua__modules.html">Adopting Lingua:: modules</a></td>
+<td>2014-05-24</td><td><a href="/blog/adopting_lingua__modules.html">Adopting Lingua:: modules</a></td>
 </tr>
 <tr>
-<td>2014-05-24</td><td><a href="/blog\test_driven_lexicography.html">Test-driven lexicography</a></td>
+<td>2014-05-24</td><td><a href="/blog/test_driven_lexicography.html">Test-driven lexicography</a></td>
 </tr>
 <tr>
-<td>2014-05-21</td><td><a href="/blog\text_nsp.html">Text::NSP</a></td>
+<td>2014-05-21</td><td><a href="/blog/text_nsp.html">Text::NSP</a></td>
 </tr>
 <tr>
-<td>2014-05-20</td><td><a href="/blog\perl_and_nlp.html">Perl and NLP</a></td>
+<td>2014-05-20</td><td><a href="/blog/perl_and_nlp.html">Perl and NLP</a></td>
 </tr>
 <tr>
-<td>2014-05-08</td><td><a href="/blog\hoverboards_why_science_cant_stop_yet.html">Hoverboards: why science can't stop yet</a></td>
+<td>2014-05-08</td><td><a href="/blog/hoverboards_why_science_cant_stop_yet.html">Hoverboards: why science can't stop yet</a></td>
 </tr>
 <tr>
-<td>2014-05-05</td><td><a href="/perl\perl_uac.html">Perl and Windows UAC</a></td>
+<td>2014-05-05</td><td><a href="/perl/perl_uac.html">Perl and Windows UAC</a></td>
 </tr>
 <tr>
-<td>2014-05-03</td><td><a href="/marpa\marpa_example1.html">marpa_example1.html</a></td>
+<td>2014-05-03</td><td><a href="/marpa/marpa_example1.html">marpa_example1.html</a></td>
 </tr>
 <tr>
-<td>2014-04-24</td><td><a href="/blog\third_article_done.html">Third article in as many weeks</a></td>
+<td>2014-04-24</td><td><a href="/blog/third_article_done.html">Third article in as many weeks</a></td>
 </tr>
 <tr>
-<td>2014-04-21</td><td><a href="/perl\keepassrest.html">Perl and KeePass through SSL</a></td>
+<td>2014-04-21</td><td><a href="/perl/keepassrest.html">Perl and KeePass through SSL</a></td>
 </tr>
 <tr>
-<td>2014-04-13</td><td><a href="/trados\trados_2007_languages.html">TRADOS 2007 and its language codes</a></td>
+<td>2014-04-13</td><td><a href="/trados/trados_2007_languages.html">TRADOS 2007 and its language codes</a></td>
 </tr>
 <tr>
-<td>2014-04-12</td><td><a href="/translation\index.html">Translation software and services</a></td>
+<td>2014-04-12</td><td><a href="/translation/index.html">Translation software and services</a></td>
 </tr>
 <tr>
-<td>2014-04-12</td><td><a href="/blog\state_of_the_site.html">State of the site</a></td>
+<td>2014-04-12</td><td><a href="/blog/state_of_the_site.html">State of the site</a></td>
 </tr>
 <tr>
-<td>2014-04-09</td><td><a href="/blog\blogging_works_again.html">Blogging works again</a></td>
+<td>2014-04-09</td><td><a href="/blog/blogging_works_again.html">Blogging works again</a></td>
 </tr>
 <tr>
 <td>2014-04-07</td><td><a href="/baaaack.html">Vivtek is back! Again!</a></td>
@@ -151,43 +151,43 @@ Here's what I've been doing lately:
 <td>2012-12-25</td><td><a href="/moving_to_static.html">Moving to static text on Github</a></td>
 </tr>
 <tr>
-<td>2011-01-01</td><td><a href="/blog\blogging_hiatus.html">--blogging hiatus--</a></td>
+<td>2011-01-01</td><td><a href="/blog/blogging_hiatus.html">--blogging hiatus--</a></td>
 </tr>
 <tr>
-<td>2009-07-31</td><td><a href="/blog\house_update.html">House update</a></td>
+<td>2009-07-31</td><td><a href="/blog/house_update.html">House update</a></td>
 </tr>
 <tr>
-<td>2009-04-14</td><td><a href="/blog\t_minus_a_month.html">T minus a month!</a></td>
+<td>2009-04-14</td><td><a href="/blog/t_minus_a_month.html">T minus a month!</a></td>
 </tr>
 <tr>
-<td>2009-04-13</td><td><a href="/blog\garfield_zen.html">Your Garfield zen for the day</a></td>
+<td>2009-04-13</td><td><a href="/blog/garfield_zen.html">Your Garfield zen for the day</a></td>
 </tr>
 <tr>
-<td>2009-04-12</td><td><a href="/projects\text_registration\index.html">Text image handling</a></td>
+<td>2009-04-12</td><td><a href="/projects/text_registration/index.html">Text image handling</a></td>
 </tr>
 <tr>
-<td>2009-04-11</td><td><a href="/projects\index.html">Programming projects</a></td>
+<td>2009-04-11</td><td><a href="/projects/index.html">Programming projects</a></td>
 </tr>
 <tr>
-<td>2009-03-31</td><td><a href="/blog\lower_house_payments.html">Lower your house payments!</a></td>
+<td>2009-03-31</td><td><a href="/blog/lower_house_payments.html">Lower your house payments!</a></td>
 </tr>
 <tr>
-<td>2009-03-24</td><td><a href="/blog\riddle_me_this.html">So riddle me this</a></td>
+<td>2009-03-24</td><td><a href="/blog/riddle_me_this.html">So riddle me this</a></td>
 </tr>
 <tr>
-<td>2009-03-22</td><td><a href="/blog\latitude_40_0000.html">Latitude 40.0000!</a></td>
+<td>2009-03-22</td><td><a href="/blog/latitude_40_0000.html">Latitude 40.0000!</a></td>
 </tr>
 <tr>
-<td>2009-03-20</td><td><a href="/blog\comparative_prgg_modest_idea.html">Comparative programming - a modest proposal</a></td>
+<td>2009-03-20</td><td><a href="/blog/comparative_prgg_modest_idea.html">Comparative programming - a modest proposal</a></td>
 </tr>
 <tr>
-<td>2009-03-18</td><td><a href="/blog\renaissance_house.html">Renaissance House</a></td>
+<td>2009-03-18</td><td><a href="/blog/renaissance_house.html">Renaissance House</a></td>
 </tr>
 <tr>
-<td>2009-03-17</td><td><a href="/blog\Workflow_wftk_development_continues.html">Workflow wftk development continues</a></td>
+<td>2009-03-17</td><td><a href="/blog/Workflow_wftk_development_continues.html">Workflow wftk development continues</a></td>
 </tr>
 <tr>
-<td>2009-03-13</td><td><a href="/hikingpr\maricao.html">Bosque Estatal de Maricao/Maricao State Forest</a></td>
+<td>2009-03-13</td><td><a href="/hikingpr/maricao.html">Bosque Estatal de Maricao/Maricao State Forest</a></td>
 </tr>
 </table>
 
