New article on Marpa

--- a/recent.html
+++ b/recent.html
@@ -100,6 +100,12 @@ google_ad_channel = "";
 Here's what I've been doing lately:
 <table>
 <tr>
+<td>2014-10-06</td><td><a href="/marpa/test_script.html">Test script using an external tokenizer with Marpa</a></td>
+</tr>
+<tr>
+<td>2014-10-06</td><td><a href="/marpa/external_tokenizer.html">Proof of concept: using Marpa with an external tokenizer</a></td>
+</tr>
+<tr>
 <td>2014-09-06</td><td><a href="/blog/summer_2014.html">--summer 2014--</a></td>
 </tr>
 <tr>
@@ -182,12 +188,6 @@ Here's what I've been doing lately:
 </tr>
 <tr>
 <td>2009-03-20</td><td><a href="/blog/comparative_prgg_modest_idea.html">Comparative programming - a modest proposal</a></td>
-</tr>
-<tr>
-<td>2009-03-18</td><td><a href="/blog/renaissance_house.html">Renaissance House</a></td>
-</tr>
-<tr>
-<td>2009-03-17</td><td><a href="/blog/Workflow_wftk_development_continues.html">Workflow wftk development continues</a></td>
 </tr>
 </table>
 
