Fixed a bug in the article builder

--- a/marpa/test_script.html
+++ b/marpa/test_script.html
@@ -99,7 +99,7 @@ google_ad_channel = "";
 <div class="title">Test script using an external tokenizer with Marpa</div>
 This is a proof-of-concept script illustrating how to use the Marpa parser with an external
 tokenizer. For some background and analysis of how it works, see the
-<a href="external_tokenizer.wiki#analysis">main article</a>. A downloadable text version can be found
+<a href="external_tokenizer.html#analysis">main article</a>. A downloadable text version can be found
 <a href="test_script_text.txt">here</a>.
 </p><p>
 </p><p><pre><span class="linenum">01</span> <span class="synStatement">use strict</span>; <span class="synStatement">use warnings</span>;
