--- a/index.html
+++ b/index.html
@@ -117,5 +117,6 @@ most recently:
 
 Can you believe this is served up from Github now?
 </center>
+<script data-goatcounter="https://vivtek.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
