--- a/code_analysis.html
+++ b/code_analysis.html
@@ -1,54 +1,7 @@
 <html>
 <head>
 <title>Code analysis and software measurement</title>
-<style>p, li, td {
-font-family: arial, sans-serif;
-}
-p.smtitle {
-margin-left:0px;background-color:#eeeeee;font-weight:bold;
-}
-.sidemenu p {
-font-size:small;
-margin-top:0px;
-margin-bottom:2px;
-margin-left:10px;
-}
-.title {
-font-family: arial, sans-serif;
-font-weight: bold;
-font-size:x-large;
-color:black;
-background-color:#eeeeee;
-}
-.subtitle {
-font-family: arial, sans-serif;
-font-size:small;
-}
-.t2 {
-font-family: arial, sans-serif;
-font-weight: bold;
-font-size:large;
-color:black;
-background-color:#eeeeee;
-}
-.st2 {
-font-family: arial, sans-serif;
-font-size:x-small;
-}
-.border {
-border: 1px solid #336600;
-}
-.content {
-}
-pre.code {
-  margin: .5em 1em;
-  padding: 0.5em;
-  border: 1px dashed #94bd8d;
-  color: Black;
-  background-color: #eff7ef;
-  overflow: auto;
-}
-</style>
+<link href="/styles/vv.css" rel="stylesheet">
 </head>
 <body>
 <table width="100%">
@@ -64,23 +17,6 @@ pre.code {
 <p>[ <a href=/translation/>translation</a> ]</p>
 <p>[ <a href=/fiction/>fiction</a> ]</p>
 <p>[ <a href=/contact.html>contact</a> ]</p>
-</div>
-
-<hr />
-<script type="text/javascript"><!--
-google_ad_client = "pub-7508846022405297";
-google_ad_width = 120;
-google_ad_height = 600;
-google_ad_format = "120x600_as";
-google_ad_type = "text";
-google_ad_channel = "";
-//--></script>
-<script type="text/javascript"
-  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-
-</div>
-
 </div>
 </td>
 <td valign="top"><div class="content">
@@ -172,6 +108,6 @@ Some other links from a recent Google:
     <Font Size="-1"><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.</Font>
 </center>
 
-
+<script data-goatcounter="https://vivtek.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
